# sai

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
component_derive/: Cargo.toml
component_derive/src/: lib.rs  symbol.rs
examples/: Cargo.toml  README.md  basic-tokio.rs  db.rs  foo_controller.rs  gotham_server.rs  root_registry.rs  tide_server.rs
sai/: Cargo.toml
sai/src/: component_repository.rs  downcast.rs  injected.rs  lib.rs  registry.rs  system.rs
sai/tests/: test_macros.rs  test_system.rs
sai_component_derive/: Cargo.toml
sai_component_derive/src/: lib.rs
shine/: Cargo.toml
shine/src/: component_repository.rs  injected.rs  lib.rs  registry.rs  system.rs
shine/tests/: test_macros.rs  test_system.rs
shine_component_derive/: Cargo.toml
