[package]
name = "examples"
version = "0.1.0"
publish = false
edition = "2018"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
sai = { path = "../sai" }
gotham = "0.5.0-rc.1"
futures = "0.3.5"
bb8 = "0.4.0"
bb8-postgres = "0.4.0"
tokio-postgres = "0.5.1"
postgres = "0.17.3"
tide = "0.11.0"

[[example]]
name = "basic"
path = "basic-tokio.rs"
