[package]
name = "sai"
version = "0.1.2" # Don't foget to update the version in dependencies
authors = ["zhming0 <guo.zhming@gmail.com>"]
edition = "2018"
description = "IoC/DI framework for Rust"
keywords = ["IoC", "DI", "component", "system"]
homepage = "https://github.com/zhming0/sai"
repository = "https://github.com/zhming0/sai"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
readme = "../README.md"
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sai_component_derive = { version = "=0.1.2", path = "../sai_component_derive" }
async-trait = "0.1.35"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
