[package]
name = "sai_component_derive"
version = "0.1.3" # Don't foget to update the version in dependencies
authors = ["zhming0 <guo.zhming@gmail.com>"]
edition = "2018"
description = "Implementation of #[derive(Component)] for Sai"
keywords = ["IoC", "DI", "component", "system"]
homepage = "https://github.com/zhming0/sai"
repository = "https://github.com/zhming0/sai"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
readme = "../README.md"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.27"
syn = "1.0.29"
quote = "1.0.6"
