[package]
name = "shine"
version = "0.1.0"
authors = ["ming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component_derive = { path = "../component_derive" }
async-trait = "0.1.35"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
