[package]
name = "shine"
version = "0.1.0"
authors = ["zhming0 <guo.zhming@gmail.com>"]
edition = "2018"
description = "IoC/DI framework for Rust"
keywords = ["IoC", "DI", "component", "system"]
homepage = "https://github.com/zhming0/shine"
repository = "https://github.com/zhming0/shine"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component_derive = { path = "../component_derive" }
async-trait = "0.1.35"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
